k8s/payment/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: mini

spec:
  selector:
    app: payment-service

  ports:
    - port: 5005
      targetPort: 5005
      protocol: TCP

  type: ClusterIP
